- 
    Bug 
- 
    Resolution: Done
- 
    P0: Blocker 
- 
    Qt Creator 2.8.0-beta
- 
    None
- 
    Ubuntu 12.10, 64 Bit
Qt Creator, from master branch, rev. 186c457d6c15415aa204fe41eede16b2ea480de0
Use the wizard to create two Qt Gui Applications. As soon as you hit "Finish" in the wizard for the second application, Qt Creator freezes.
The backtrace indicates an endless loop involving e.g. ProjectExplorer::ProjectExplorerPlugin::setCurrent and Core::DocumentManager::currentFileChanged.
(gdb) bt
#0  0x00007ff3dfc43836 in QMapData<Core::Id, QPointer<QAction> >::findNode (this=0x7f0183a65960, akey=...) at /home/nikolai/usr/qt-5.0.1/include/QtCore/qmap.h:287
#1  0x00007ff3dfc43064 in QMap<Core::Id, QPointer<QAction> >::value (this=0x2e528d8, akey=..., adefaultValue=...) at /home/nikolai/usr/qt-5.0.1/include/QtCore/qmap.h:585
#2  0x00007ff3dfc41e1b in Core::Internal::Action::setCurrentContext (this=0x2e52890, context=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/actionmanager/command.cpp:410
#3  0x00007ff3dfc3de03 in Core::Internal::ActionManagerPrivate::setContext (this=0x21e49f0, context=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/actionmanager/actionmanager.cpp:479
#4  0x00007ff3dfbf1d30 in Core::Internal::MainWindow::updateContext (this=0x21dc360) at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/mainwindow.cpp:1254
#5  0x00007ff3dfbf1bdd in Core::Internal::MainWindow::updateAdditionalContexts (this=0x21dc360, remove=..., add=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/mainwindow.cpp:1235
#6  0x00007ff3dfcb31bc in Core::ICore::updateAdditionalContexts (remove=..., add=...) at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/icore.cpp:529
#7  0x00007ff3d782e54a in ProjectExplorer::ProjectExplorerPlugin::updateContext (this=0x22ae400)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1779
#8  0x00007ff3d782e957 in ProjectExplorer::ProjectExplorerPlugin::setCurrent (this=0x22ae400, project=0x3b04e00, filePath=..., node=0x3c8fd60)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1810
#9  0x00007ff3d782c1bb in ProjectExplorer::ProjectExplorerPlugin::setCurrentFile (this=0x22ae400, filePath=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1422
#10 0x00007ff3d79d8f2e in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall (_o=0x22ae400, _c=QMetaObject::InvokeMetaMethod, _id=64, _a=0x7fff83a65e50)
    at .moc/debug-shared/moc_projectexplorer.cpp:526
#11 0x00007ff3fe58fd9d in QMetaObject::activate (sender=0x21af780, signalOffset=3, local_signal_index=0, argv=0x7fff83a65e50) at kernel/qobject.cpp:3441
#12 0x00007ff3fe58f57c in QMetaObject::activate (sender=0x21af780, m=0x7ff3dfff9f80 <Core::DocumentManager::staticMetaObject>, local_signal_index=0, argv=0x7fff83a65e50)
    at kernel/qobject.cpp:3316
#13 0x00007ff3dfd14c01 in Core::DocumentManager::currentFileChanged (this=0x21af780, _t1=...) at .moc/debug-shared/moc_documentmanager.cpp:215
#14 0x00007ff3dfcfddfb in Core::DocumentManager::setCurrentFile (filePath=...) at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/documentmanager.cpp:1193
#15 0x00007ff3d782ed13 in ProjectExplorer::ProjectExplorerPlugin::setCurrent (this=0x22ae400, project=0x3b04e00, filePath=..., node=0x3c8fd60)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1830
#16 0x00007ff3d782c1bb in ProjectExplorer::ProjectExplorerPlugin::setCurrentFile (this=0x22ae400, filePath=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1422
#17 0x00007ff3d79d8f2e in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall (_o=0x22ae400, _c=QMetaObject::InvokeMetaMethod, _id=64, _a=0x7fff83a66170)
    at .moc/debug-shared/moc_projectexplorer.cpp:526
#18 0x00007ff3fe58fd9d in QMetaObject::activate (sender=0x21af780, signalOffset=3, local_signal_index=0, argv=0x7fff83a66170) at kernel/qobject.cpp:3441
#19 0x00007ff3fe58f57c in QMetaObject::activate (sender=0x21af780, m=0x7ff3dfff9f80 <Core::DocumentManager::staticMetaObject>, local_signal_index=0, argv=0x7fff83a66170)
    at kernel/qobject.cpp:3316
#20 0x00007ff3dfd14c01 in Core::DocumentManager::currentFileChanged (this=0x21af780, _t1=...) at .moc/debug-shared/moc_documentmanager.cpp:215
#21 0x00007ff3dfcfddfb in Core::DocumentManager::setCurrentFile (filePath=...) at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/documentmanager.cpp:1193
#22 0x00007ff3d782ed13 in ProjectExplorer::ProjectExplorerPlugin::setCurrent (this=0x22ae400, project=0x3b04e00, filePath=..., node=0x3c8fd60)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1830
#23 0x00007ff3d782c1bb in ProjectExplorer::ProjectExplorerPlugin::setCurrentFile (this=0x22ae400, filePath=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1422
#24 0x00007ff3d79d8f2e in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall (_o=0x22ae400, _c=QMetaObject::InvokeMetaMethod, _id=64, _a=0x7fff83a66490)
    at .moc/debug-shared/moc_projectexplorer.cpp:526
#25 0x00007ff3fe58fd9d in QMetaObject::activate (sender=0x21af780, signalOffset=3, local_signal_index=0, argv=0x7fff83a66490) at kernel/qobject.cpp:3441
#26 0x00007ff3fe58f57c in QMetaObject::activate (sender=0x21af780, m=0x7ff3dfff9f80 <Core::DocumentManager::staticMetaObject>, local_signal_index=0, argv=0x7fff83a66490)
    at kernel/qobject.cpp:3316
#27 0x00007ff3dfd14c01 in Core::DocumentManager::currentFileChanged (this=0x21af780, _t1=...) at .moc/debug-shared/moc_documentmanager.cpp:215
#28 0x00007ff3dfcfddfb in Core::DocumentManager::setCurrentFile (filePath=...) at /home/nikolai/dev/creator/qtcreator-master/src/plugins/coreplugin/documentmanager.cpp:1193
#29 0x00007ff3d782ed13 in ProjectExplorer::ProjectExplorerPlugin::setCurrent (this=0x22ae400, project=0x3b04e00, filePath=..., node=0x3c8fd60)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1830
#30 0x00007ff3d782c1bb in ProjectExplorer::ProjectExplorerPlugin::setCurrentFile (this=0x22ae400, filePath=...)
    at /home/nikolai/dev/creator/qtcreator-master/src/plugins/projectexplorer/projectexplorer.cpp:1422
#31 0x00007ff3d79d8f2e in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall (_o=0x22ae400, _c=QMetaObject::InvokeMetaMethod, _id=64, _a=0x7fff83a667b0)
    at .moc/debug-shared/moc_projectexplorer.cpp:526
#32 0x00007ff3fe58fd9d in QMetaObject::activate (sender=0x21af780, signalOffset=3, local_signal_index=0, argv=0x7fff83a667b0) at kernel/qobject.cpp:3441
#33 0x00007ff3fe58f57c in QMetaObject::activate (sender=0x21af780, m=0x7ff3dfff9f80 <Core::DocumentManager::staticMetaObject>, local_signal_index=0, argv=0x7fff83a667b0)
    at kernel/qobject.cpp:3316
#34 0x00007ff3dfd14c01 in Core::DocumentManager::currentFileChanged (this=0x21af780, _t1=...) at .moc/debug-shared/moc_documentmanager.cpp:215
...
- replaces
- 
                    QTCREATORBUG-9145 Crash when close console helloWorld project -           
- Closed
 
-         
| For Gerrit Dashboard: QTCREATORBUG-9140 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 53899,1 | ProjectExplorer: Fix endless loop | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |