ProjectExplorer: Fix endless loop

Task-number: QTCREATORBUG-9140
Change-Id: Idb26f9ee0581bc426b144310cab76ddbf5f84d2f
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>